[package]
name = "xalps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
base64 = "0.21.2"
bytes = "1.4.0"
chrono = "0.4.26"
isocountry = "0.3.2"
protobuf = "3.2.0"
quick-protobuf = "0.8.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["full"] }
