[package]
name = "xalps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
protoc-rust = "2.28"

[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
chrono = "0.4.26"
clearscreen = { version = "2.0.1", features = ["windows-console"] }
cli-table = "0.4.7"
derive_more = "0.99.17"
isocountry = "0.3.2"
notify-rust = "4.8.0"
protobuf = "2.28.0"
protoc="2.28.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.6.0"
tokio = { version = "1.28.2", features = ["full"] }
